homepage styles and animations

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,9 @@
             <h4>Одностраничный <br />сайт-высказывание</h4>
           </div>
           <p class="body-other">
-            Веб-плакат&nbsp;&mdash; это интерактивная страница в&nbsp;браузере,
-            где ты&nbsp;выражаешь свою идею через визуал, движение
-            и&nbsp;взаимодействие, а&nbsp;не&nbsp;продаёшь услугу или
-            рассказываешь длинную историю.
+            Веб-плакат&nbsp;&mdash; это интерактивная страница, где
+            ты&nbsp;выражаешь свою идею или сообщение через визуал,
+            а&nbsp;не&nbsp;продаёшь услугу или рассказываешь длинную историю.
           </p>
         </div>
         <!-- second -->
@@ -56,9 +55,8 @@
           </div>
           <p class="body-other">
             Формат учит применять на&nbsp;практике HTML, CSS и&nbsp;JavaScript
-            для воплощения визуальных идей: работате с&nbsp;вёрсткой, анимациями
-            в&nbsp;вебе и интерактивностью без зависимости
-            от&nbsp;разработчиков.
+            для воплощения визуальных, креативных и&nbsp;концептуальных идей
+            в&nbsp;дизайне
           </p>
         </div>
         <!-- third -->
@@ -69,8 +67,8 @@
           </div>
           <p class="body-other">
             Обучайся через практику&nbsp;&mdash; создавай анимации, вёрстку
-            и&nbsp;интерактивность для своей идеи, а&nbsp;не&nbsp;повторяй
-            абстрактные примеры из&nbsp;учебников или упражнений
+            и&nbsp;интерактив для своей идеи, а&nbsp;не&nbsp;повторяй
+            абстрактные примеры.
           </p>
         </div>
       </div>
@@ -239,72 +237,120 @@
         <div class="O_ModulesBlock">
           <div class="M_HeadingContainer">
             <h2>Не пиши весь код сам — воспользуйся готовым</h2>
+            <div class="M_ParagraphButton">
+              <p class="subtitle light">
+                Библиотека готовых CSS и JavaScript решений для тебя и твоего
+                проекта. Анимации, эффекты скролла, drag-and-drop.
+              </p>
+              <a href="modules.html" class="A_Button">Перейти в модули</a>
+            </div>
+          </div>
 
+          <!-- need to fix the problem width the length of the content -->
+          <div class="M_Marquee">
+            <div class="fade-container"></div>
+            <ul class="W_MarqueeContent">
+              <span class="A_Tag code">keyframes</span>
+              <span class="A_Tag code">filter</span>
+              <span class="A_Tag code">transform</span>
+              <span class="A_Tag code">rotate</span>
+              <span class="A_Tag code">addEventListener</span>
+              <span class="A_Tag code">timeout</span>
+              <span class="A_Tag code">requestAnimationFrame</span>
+              <span class="A_Tag code">classList</span>
+            </ul>
+          </div>
+          <div class="C_Modules">
+            <!-- First card -->
+            <a href="index.html" class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_ArticleCardBio">
+                <p class="caption-caps">CSS · Легко</p>
+                <div class="M_AboutArticle">
+                  <h4>Трансформация</h4>
+                  <p class="body">
+                    Меняйте форму, масштаб и&nbsp;перспективу объектов через
+                    разлиные свойства
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Second card -->
+            <a href="index.html" class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_ArticleCardBio">
+                <p class="caption-caps">CSS · Легко</p>
+                <div class="M_AboutArticle">
+                  <h4>Вращение</h4>
+                  <p class="body">
+                    Превратите элементы в&nbsp;динамичные акцентычерез вращение
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Third card -->
+            <a href="index.html" class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_ArticleCardBio">
+                <p class="caption-caps">JavaScript · Средне</p>
+                <div class="M_AboutArticle">
+                  <h4>Перетаскивание</h4>
+                  <p class="body">
+                    Добавьте объектам и&nbsp;элементам вес и&nbsp;реалистичность
+                    с&nbsp;drag and drop
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Fourd card -->
+            <a href="index.html" class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_ArticleCardBio">
+                <p class="caption-caps">JavaScript · Средне</p>
+                <div class="M_AboutArticle">
+                  <h4>Клик</h4>
+                  <p class="body">
+                    Добавьте реакции и&nbsp;взаимодействия, срабатывающие
+                    по&nbsp;клику
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- LastBlock -->
+      <div class="S_ManyPosters">
+        <div class="M_HeadingContainer">
+          <h2>Библиотека из 220+ ярких веб-плакатов</h2>
+          <div class="M_ParagraphButton">
             <p class="subtitle light">
               Библиотека готовых CSS и JavaScript решений для тебя и твоего
               проекта. Анимации, эффекты скролла, drag-and-drop.
             </p>
+            <a href="modules.html" class="A_Button">Перейти в модули</a>
           </div>
-
-          <div class="marquee">
-            <ul class="marquee-content">
-              <span class="A_Tag">keyframes</span>
-              <span class="A_Tag">filter</span>
-              <span class="A_Tag">transform</span>
-              <span class="A_Tag">rotate</span>
-              <span class="A_Tag">addEventListener</span>
-              <span class="A_Tag">timeout</span>
-              <span class="A_Tag">requestAnimationFrame</span>
-              <span class="A_Tag">classList</span>
-            </ul>
-          </div>
-          <div class="C_Modules">
-            <div class="O_ModuleCard">
-              <div class="Q_ModuleCardCover"></div>
-              <div class="M_AboutArticle">
-                <h4>Article name</h4>
-                <p class="body">
-                  Article bio about web-poster in a short way described with a
-                  few words
-                </p>
-              </div>
+        </div>
+        <div class="C_PostersRow">
+          <div class="W_RowPostersAnim">
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
             </div>
-            <div class="O_ModuleCard">
-              <div class="Q_ModuleCardCover"></div>
-              <div class="M_AboutArticle">
-                <h4>Article name</h4>
-                <p class="body">
-                  Article bio about web-poster in a short way described with a
-                  few words
-                </p>
-              </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
             </div>
-            <div class="O_ModuleCard">
-              <div class="Q_ModuleCardCover"></div>
-              <div class="M_AboutArticle">
-                <h4>Article name</h4>
-                <p class="body">
-                  Article bio about web-poster in a short way described with a
-                  few words
-                </p>
-              </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
             </div>
-            <div class="O_ModuleCard">
-              <div class="Q_ModuleCardCover"></div>
-              <div class="M_AboutArticle">
-                <h4>Article name</h4>
-                <p class="body">
-                  Article bio about web-poster in a short way described with a
-                  few words
-                </p>
-              </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
             </div>
           </div>
-          <a href="modules.html" class="A_Button">Перейти в модули</a>
         </div>
       </div>
-      <!-- LastBlock -->
-      <div class="S_ManyPosters"></div>
     </div>
   </body>
 </html>
