started working on code pre block

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <menubar></menubar>
-
     <div class="W_HandbookPageWrapper margin-container">
       <!-- First screen -->
       <div class="S_HandbookFirstScreen">
@@ -233,5 +232,6 @@
       </div>
       <!-- Articles Second -->
     </div>
+    <footerbar></footerbar>
   </body>
 </html>
