--- a/src/modules.html
+++ b/src/modules.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" , initial-scale="1" />
@@ -13,4 +13,5 @@
       <a href="./index.html">На главную</a>
     </div>
   </body>
+  <footerbar></footerbar>
 </html>
