--- a/src/handbook.html
+++ b/src/handbook.html
@@ -115,29 +115,29 @@
             >
               <p class="body bold">01</p>
               <p class="body bold">Что такое веб-плакат</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type" data-count="4">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">02</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type" data-count="4">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">03</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type" data-count="4">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">04</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type" data-count="4">Теория</span>
               <p class="body">Перейти</p>
             </a>
           </div>
@@ -202,29 +202,29 @@
             <a class="O_Chapter" href="index.html">
               <p class="body bold">01</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">02</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">03</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">04</p>
               <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">3 articles</p>
-              <span class="A_Tag">Теория</span>
+              <p class="body bold">4 статьи</p>
+              <span class="A_Tag article-type">Теория</span>
               <p class="body">Перейти</p>
             </a>
           </div>
