some adaptive styles

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -98,7 +98,9 @@
               </div>
             </div>
           </div>
-          <a class="A_Button" href="index.html">Читать учебник</a>
+          <a class="A_Button" href="handbook/part_1/part_1.html"
+            >Перейти к части</a
+          >
         </div>
         <!-- Chapers -->
         <div class="S_Chapters">
