--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!-- TextAbout -->
     <div class="W_HomePageWrapper margin-container">
       <div class="M_BigTextAbout">
-        <p class="subtitle light">Веб-плакат — это</p>
+        <p class="caption-caps light">Веб-плакат — это</p>
         <h2 class="right-container">
           Практический и творческий инструмент для дизайнеров, осваивающих
           веб-вёрстку
