handook structure and links

--- a/src/handbook/part_1/part_1.html
+++ b/src/handbook/part_1/part_1.html
@@ -16,7 +16,7 @@
             <a class="caption-caps" href="../../../handbook.html"> Учебник </a>
             •
             <a class="caption-caps" href="../../../handbook.html">
-              Введение в веб-плакат
+              Знакомство с веб-плакатом
             </a>
             •
             <span class="caption-caps"> {article.name} </span>
@@ -49,8 +49,9 @@
         <div class="M_BigTextAbout">
           <p class="caption-caps light">Содержание</p>
           <h4 class="right-container">
-            Разберём что такое веб-плакат, как он появился, что нужно для его
-            сборки. Как пратика создания такого плаката прокачивает дизайнера
+            Теоретическая часть для тех, кто хочет понять, что такое веб-плакат,
+            чем он&nbsp;отличается от&nbsp;сайта и&nbsp;почему это интересный
+            формат для творческих экспериментов с&nbsp;кодом.
           </h4>
         </div>
         <!-- First chapter -->
