--- a/src/handbook.html
+++ b/src/handbook.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="Q_PageCover"></div>
-
+        <!-- TabsHere -->
         <div class="C_Tabs">
           <button class="A_Tab">
             <p>Весь материал</p>
@@ -52,7 +52,7 @@
           </button>
         </div>
       </div>
-      <!-- Articles first -->
+      <!-- FirstPart -->
       <div class="L_ArticlesPreviewSection">
         <div class="S_SectionAbout">
           <div class="W_SectionAboutInfo">
@@ -65,10 +65,10 @@
                     width="24"
                     height="24"
                   />
-                  <p class="subtitle light">2 часа 24 минуты</p>
+                  <p class="subtitle light">30 минут</p>
                 </div>
 
-                <h2>Введение в формат <br />веб-плаката</h2>
+                <h2>Знакомство <br />с форматом веб-плаката</h2>
               </div>
             </div>
 
@@ -91,9 +91,10 @@
                 <div class="Q_HandleSquare rt"></div>
                 <div class="Q_HandleSquare rb"></div>
                 <p class="body-other">
-                  Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
-                  сколько угодно раз. Учебник проводит поэтапно от формирования
-                  концепции до полной реализации и публикации веб-плаката
+                  Теоретическая часть для тех, кто хочет понять, что такое
+                  веб-плакат, чем он&nbsp;отличается от&nbsp;сайта и&nbsp;почему
+                  это интересный формат для творческих экспериментов
+                  с&nbsp;кодом.
                 </p>
               </div>
             </div>
@@ -110,6 +111,7 @@
             <p class="body-other">Материал</p>
             <p class="body-other">Категория</p>
           </div>
+          <!-- Chapters of handbook -->
           <div class="C_Chapters">
             <a
               class="O_Chapter"
@@ -123,28 +125,25 @@
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">02</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type" data-count="4">Теория</span>
+              <p class="body bold">Зачем делать веб-плакат</p>
+              <p class="body bold">2 статьи</p>
+              <span class="A_Tag article-type" data-count="2">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">03</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type" data-count="4">Теория</span>
-              <p class="body">Перейти</p>
-            </a>
-            <a class="O_Chapter" href="index.html">
-              <p class="body bold">04</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type" data-count="4">Теория</span>
+              <p class="body bold">Примеры и насмотренность</p>
+              <p class="body bold">2 статьи</p>
+              <span class="A_Tag article-type" data-count="2">Теория</span>
               <p class="body">Перейти</p>
             </a>
           </div>
         </div>
       </div>
+      <!-- DividerBanner -->
+      <div class="O_DividerBanner margin-container"></div>
+
+      <!-- SecondPart -->
       <div class="L_ArticlesPreviewSection">
         <div class="S_SectionAbout">
           <div class="W_SectionAboutInfo">
@@ -157,10 +156,10 @@
                     width="24"
                     height="24"
                   />
-                  <p class="subtitle light">2 часа 24 минуты</p>
+                  <p class="subtitle light">1 час, 35 минут</p>
                 </div>
 
-                <h2>Введение в формат <br />веб-плаката</h2>
+                <h2>Дизайн и вёрстка <br />веб-плаката</h2>
               </div>
             </div>
 
@@ -168,24 +167,25 @@
               <div class="M_Markers">
                 <div class="A_CircleMarker">
                   <div class="Q_Circle">
-                    <p class="subtitle">2</p>
+                    <p class="subtitle">6</p>
                   </div>
-                  <p>Части</p>
+                  <p>Глав</p>
                 </div>
                 <div class="A_CircleMarker">
                   <div class="Q_Circle">
-                    <p class="subtitle">32</p>
+                    <p class="subtitle">21</p>
                   </div>
-                  <p>Главы</p>
+                  <p>Статья</p>
                 </div>
               </div>
               <div class="A_CaptionText">
                 <div class="Q_HandleSquare rt"></div>
                 <div class="Q_HandleSquare rb"></div>
                 <p class="body-other">
-                  Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
-                  сколько угодно раз. Учебник проводит поэтапно от формирования
-                  концепции до полной реализации и публикации веб-плаката
+                  Практическая часть проводит от&nbsp; самой идеи
+                  до&nbsp;публикации работы. Каждая глава&nbsp;&mdash; этап
+                  процесса. Логика простая: сначала понимаем, что хотим сделать,
+                  только потом проектируем.
                 </p>
               </div>
             </div>
@@ -203,30 +203,37 @@
           <div class="C_Chapters">
             <a class="O_Chapter" href="index.html">
               <p class="body bold">01</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type">Теория</span>
+              <p class="body bold">Идея и концепция</p>
+              <p class="body bold">3 статьи</p>
+              <span class="A_Tag article-type" data-count="3">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">02</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type">Теория</span>
+              <p class="body bold">Разработка макета</p>
+              <p class="body bold">6 статей</p>
+              <span class="A_Tag article-type" data-count="6">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">03</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type">Теория</span>
+              <p class="body bold">Вёрстка веб-плаката</p>
+              <p class="body bold">5 статей</p>
+              <span class="A_Tag article-type" data-count="5">Теория</span>
               <p class="body">Перейти</p>
             </a>
             <a class="O_Chapter" href="index.html">
               <p class="body bold">04</p>
-              <p class="body bold">Выбор динамических и статичных модулей</p>
-              <p class="body bold">4 статьи</p>
-              <span class="A_Tag article-type">Теория</span>
+              <p class="body bold">Анимация в CSS</p>
+              <p class="body bold">3 статьи</p>
+              <span class="A_Tag article-type" data-count="3">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">05</p>
+              <p class="body bold">Интерактивность с JavaScript</p>
+              <p class="body bold">3 статьи</p>
+              <span class="A_Tag article-type" data-count="5">Теория</span>
               <p class="body">Перейти</p>
             </a>
           </div>
