--- a/src/handbook.html
+++ b/src/handbook.html
@@ -141,7 +141,27 @@
         </div>
       </div>
       <!-- DividerBanner -->
-      <div class="O_DividerBanner margin-container"></div>
+      <div class="O_DividerBanner">
+        <div class="W_BannerContent">
+          <div class="W_BannerText">
+            <div class="M_ChapterHeading">
+              <h2>Готовые решения для вашего веб-плаката</h2>
+              <h4>
+                Библиотека популярных и типовых решений в CSS и JS для вашего
+                веб-плаката
+              </h4>
+            </div>
+            <a href="modules.html" class="A_Button">Перейти к модулям</a>
+          </div>
+          <div class="A_Illustration">
+            <img src="./images/banner_illustration.svg" alt="кортиночка" />
+            <div class="Q_HandleSquare lt"></div>
+            <div class="Q_HandleSquare lb"></div>
+            <div class="Q_HandleSquare rt"></div>
+            <div class="Q_HandleSquare rb"></div>
+          </div>
+        </div>
+      </div>
 
       <!-- SecondPart -->
       <div class="L_ArticlesPreviewSection">
