nextprev links and some adaptives

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -21,7 +21,7 @@
             <div class="Q_HandleSquare rt"></div>
             <div class="Q_HandleSquare rb"></div>
             <p class="body-other">
-              Полное теоретическое и практическое <br />руководство по созданию
+              Полное теоретическое и практическое руководство по созданию
               веб-плаката
             </p>
           </div>
