--- a/src/handbook/part_1/part_1.html
+++ b/src/handbook/part_1/part_1.html
@@ -61,7 +61,7 @@
             <p class="subtitle light">Теория · 4 статьи</p>
           </div>
           <!-- First chapter -->
-          <div class="C_Articles">
+          <div class="C_Articles handbook">
             <!-- First Article -->
             <a class="O_CardArticle" href="about_webposter.html">
               <div class="Q_ArticleImage">
@@ -129,7 +129,7 @@
             <p class="subtitle light">Теория · 4 статьи</p>
           </div>
           <!-- First chapter -->
-          <div class="C_Articles">
+          <div class="C_Articles handbook">
             <!-- First Article -->
             <a class="O_CardArticle" href="about_webposter.html">
               <div class="Q_ArticleImage">
@@ -197,7 +197,7 @@
             <p class="subtitle light">Теория · 4 статьи</p>
           </div>
           <!-- First chapter -->
-          <div class="C_Articles">
+          <div class="C_Articles handbook">
             <!-- First Article -->
             <a class="O_CardArticle" href="about_webposter.html">
               <div class="Q_ArticleImage">
