--- a/src/handbook.html
+++ b/src/handbook.html
@@ -12,21 +12,18 @@
       <div class="S_HandbookFirstScreen">
         <div class="W_SectionAboutInfo">
           <div class="M_HeadingContainer">
-            <div class="A_IconText">
-              <p class="subtitle light">2 части · 32 статьи</p>
-            </div>
             <h1>Интерактивный <br />учебник по веб-плакату</h1>
           </div>
           <div class="A_CaptionText">
             <div class="Q_HandleSquare rt"></div>
             <div class="Q_HandleSquare rb"></div>
             <p class="body-other">
-              Полное теоретическое и практическое руководство по созданию
-              веб-плаката
+              Теория, примеры и&nbsp;готовые решения&nbsp;&mdash; всё, что
+              нужно, чтобы сделать свой веб-плакат с&nbsp;нуля
             </p>
           </div>
         </div>
-        <div class="Q_PageCover"></div>
+        <img class="Q_PageCover" src="./images/handbookCover.webp" alt="" />
         <!-- TabsHere -->
         <div class="C_Tabs">
           <button class="A_Tab">
