--- a/src/modules.html
+++ b/src/modules.html
@@ -7,11 +7,18 @@
   </head>
   <body>
     <menubar></menubar>
-    <div class="demo">
-      <h1>Это страница модулей</h1>
-      <p>Здесь вы можете найти информацию о различных модулях веб-плаката</p>
-      <a href="./index.html">На главную</a>
+    <div class="M_HeadAboutPage">
+      <h1>Модули</h1>
+      <div class="A_CaptionText">
+        <div class="Q_HandleSquare rt"></div>
+        <div class="Q_HandleSquare rb"></div>
+        <p class="body-other">
+          Технические приёмы и&nbsp;фрагменты кода, на&nbsp;которых строятся
+          веб-плакаты&nbsp;&mdash; с&nbsp;пояснениями и&nbsp;примерами
+          из&nbsp;реальных работ
+        </p>
+      </div>
     </div>
+    <footerbar></footerbar>
   </body>
-  <footerbar></footerbar>
 </html>
