--- a/src/posters.html
+++ b/src/posters.html
@@ -14,7 +14,8 @@
           <div class="Q_HandleSquare rt"></div>
           <div class="Q_HandleSquare rb"></div>
           <p class="body-other">
-            Каталог избранных веб-плакатов Школы дизайна с&nbsp;2019-2025
+            Шесть лет экспериментов в&nbsp;одном месте&nbsp;&mdash; студенческие
+            веб-плакаты Школы дизайна с&nbsp;2019 по&nbsp;2025 год
           </p>
         </div>
       </div>
