--- a/src/posters/poster.html
+++ b/src/posters/poster.html
@@ -9,7 +9,7 @@
   <body>
     <menubar></menubar>
     <div class="L_Poster" id="poster-page-root"></div>
-
+    <footerbar></footerbar>
     <div analytics></div>
   </body>
 </html>
