started modules pages

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -103,7 +103,7 @@
         <!-- Chapers -->
         <div class="S_Chapters">
           <div class="M_Columns">
-            <p class="body-other">Номер</p>
+            <p class="body-other number">Номер</p>
             <p class="body-other">Глава</p>
             <p class="body-other">Материал</p>
             <p class="body-other">Категория</p>
@@ -212,7 +212,7 @@
         <!-- Chapers -->
         <div class="S_Chapters">
           <div class="M_Columns">
-            <p class="body-other">Номер</p>
+            <p class="body-other number">Номер</p>
             <p class="body-other">Глава</p>
             <p class="body-other">Материал</p>
             <p class="body-other">Категория</p>
