--- a/src/modules.html
+++ b/src/modules.html
@@ -7,16 +7,98 @@
   </head>
   <body>
     <menubar></menubar>
-    <div class="M_HeadAboutPage">
-      <h1>Модули</h1>
-      <div class="A_CaptionText">
-        <div class="Q_HandleSquare rt"></div>
-        <div class="Q_HandleSquare rb"></div>
-        <p class="body-other">
-          Технические приёмы и&nbsp;фрагменты кода, на&nbsp;которых строятся
-          веб-плакаты&nbsp;&mdash; с&nbsp;пояснениями и&nbsp;примерами
-          из&nbsp;реальных работ
-        </p>
+
+    <div class="L_Modules margin-container">
+      <div class="W_ModulesPage">
+        <div class="M_HeadAboutPage">
+          <h1>Модули</h1>
+          <div class="A_CaptionText">
+            <div class="Q_HandleSquare rt"></div>
+            <div class="Q_HandleSquare rb"></div>
+            <p class="body-other">
+              Приёмы и&nbsp;фрагменты кода, на&nbsp;которых строятся
+              веб-плакаты&nbsp;&mdash; с&nbsp;пояснениями и&nbsp;примерами
+            </p>
+          </div>
+        </div>
+
+        <div class="S_Modules">
+          <div class="M_Columns modules">
+            <p class="body-other">Модуль</p>
+            <p class="body-other">Язык</p>
+            <p class="body-other">Решения</p>
+          </div>
+          <div class="C_ModulesRow">
+            <!-- Movement -->
+            <a href="./modules/static/movement.html" class="O_Module">
+              <div class="Q_ModulesIllustration">
+                <img src="./images/modules/Q_Movement.svg" alt="" />
+              </div>
+              <div class="M_TitleText">
+                <p class="body bold">Движение</p>
+                <p class="body light">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+
+              <div class="A_Tag">CSS</div>
+              <p class="body bold count" data-language="CSS">12</p>
+              <p class="body bold pseudolink">Перейти</p>
+            </a>
+            <!-- Rotation -->
+            <a href="./modules/static/movement.html" class="O_Module">
+              <div class="Q_ModulesIllustration">
+                <img src="./images/modules/Q_Rotation.svg" alt="" />
+              </div>
+              <div class="M_TitleText">
+                <p class="body bold">Вращение</p>
+                <p class="body light">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+
+              <div class="A_Tag">CSS</div>
+              <p class="body bold count" data-language="CSS">12</p>
+              <p class="body bold pseudolink">Перейти</p>
+            </a>
+            <!-- Transofrmation -->
+            <a href="./modules/static/movement.html" class="O_Module">
+              <div class="Q_ModulesIllustration">
+                <img src="./images/modules/Q_Transform.svg" alt="" />
+              </div>
+              <div class="M_TitleText">
+                <p class="body bold">Трансформация</p>
+                <p class="body light">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+
+              <div class="A_Tag">CSS</div>
+              <p class="body bold count" data-language="CSS">12</p>
+              <p class="body bold pseudolink">Перейти</p>
+            </a>
+            <!-- Text -->
+            <a href="./modules/static/movement.html" class="O_Module">
+              <div class="Q_ModulesIllustration">
+                <img src="./images/modules/Q_Text.svg" alt="" />
+              </div>
+              <div class="M_TitleText">
+                <p class="body bold">Текст</p>
+                <p class="body light">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+
+              <div class="A_Tag">CSS</div>
+              <p class="body bold count" data-language="CSS">12</p>
+              <p class="body bold pseudolink">Перейти</p>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <footerbar></footerbar>
