--- a/src/modules/static/movement.html
+++ b/src/modules/static/movement.html
@@ -1,11 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Это модуль движения</h1>
-</body>
+  </head>
+  <body>
+    <menubar></menubar>
+    <div class="O_BreadCrumbs">
+      <div class="W_NavCrumbs margin-container">
+        <nav class="M_Breadcrumbs">
+          <div class="W_BreadCrumbsContainer">
+            <a class="caption-caps" href="../../../handbook.html"> Учебник </a>
+            •
+            <a class="caption-caps" href="../part_1.html">
+              Знакомство с веб-плакатом
+            </a>
+            •
+            <span class="caption-caps"> Что такое веб-плакат</span>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="L_Module">
+      <div class="O_ModulePageCover">
+        <!-- <div class="Q_ModuleCover">
+          <img src="../../images/modules/StaticModuleCover.png" alt="" />
+        </div> -->
+        <h1>Это модуль движения</h1>
+      </div>
+      <div class="W_ModulePageWrapper margin-container"></div>
+    </div>
+    <footerbar></footerbar>
+  </body>
 </html>
