--- a/src/posters.html
+++ b/src/posters.html
@@ -7,19 +7,22 @@
   </head>
   <body>
     <menubar></menubar>
-    <div class="W_PostersPage margin-container">
-      <div class="M_HeadAboutPage">
-        <h1>Веб-плакаты</h1>
-        <div class="A_CaptionText">
-          <div class="Q_HandleSquare rt"></div>
-          <div class="Q_HandleSquare rb"></div>
-          <p class="body-other">
-            Шесть лет экспериментов в&nbsp;одном месте&nbsp;&mdash; студенческие
-            веб-плакаты Школы дизайна с&nbsp;2019 по&nbsp;2025 год
-          </p>
+    <div class="L_Posters margin-container">
+      <div class="W_PostersPage">
+        <div class="M_HeadAboutPage">
+          <h1>Веб-плакаты</h1>
+          <div class="A_CaptionText">
+            <div class="Q_HandleSquare rt"></div>
+            <div class="Q_HandleSquare rb"></div>
+            <p class="body-other">
+              Шесть лет экспериментов в&nbsp;одном месте&nbsp;&mdash;
+              студенческие веб-плакаты Школы дизайна с&nbsp;2019 по&nbsp;2025
+              год
+            </p>
+          </div>
         </div>
+        <div id="posters-catalog-root"></div>
       </div>
-      <div id="posters-catalog-root"></div>
     </div>
     <footerbar></footerbar>
   </body>
