modules cover update

--- a/src/modules/static/movement.html
+++ b/src/modules/static/movement.html
@@ -11,24 +11,34 @@
       <div class="W_NavCrumbs margin-container">
         <nav class="M_Breadcrumbs">
           <div class="W_BreadCrumbsContainer">
-            <a class="caption-caps" href="../../../handbook.html"> Учебник </a>
+            <a class="caption-caps" href="../../index.html"> Главная </a>
             •
-            <a class="caption-caps" href="../part_1.html">
-              Знакомство с веб-плакатом
-            </a>
+            <a class="caption-caps" href="../../modules.html"> Модули </a>
             •
-            <span class="caption-caps"> Что такое веб-плакат</span>
+            <span class="caption-caps"> Движение</span>
           </div>
         </nav>
       </div>
     </div>
-    <div class="L_Module">
-      <div class="O_ModulePageCover">
-        <!-- <div class="Q_ModuleCover">
-          <img src="../../images/modules/StaticModuleCover.png" alt="" />
-        </div> -->
-        <h1>Это модуль движения</h1>
+    <div class="O_ModulePageCover">
+      <img
+        class="Q_ModulesCover"
+        src="../../images/modules/StaticModuleCover.png"
+        alt=""
+      />
+      <div class="W_ModuleCoverWrapper margin-cover">
+        <div class="O_ModuleHeadText">
+          <div class="M_TitleTextMedium">
+            <h2>Движение</h2>
+            <p class="subtitle">
+              Добавляем статичным объектам выразительность с помощью базовых
+              анимаций
+            </p>
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="L_Module">
       <div class="W_ModulePageWrapper margin-container"></div>
     </div>
     <footerbar></footerbar>
