module movement article

--- a/src/handbook/part_1/part_1.html
+++ b/src/handbook/part_1/part_1.html
@@ -63,7 +63,10 @@
           <!-- First chapter -->
           <div class="C_Articles handbook">
             <!-- First Article -->
-            <a class="O_CardArticle" href="about_webposter.html">
+            <a
+              class="O_CardArticle"
+              href="../part_1/chapter_1/about_webposter.html"
+            >
               <div class="Q_ArticleImage">
                 <img src="../../images/placeholder.png" alt="" />
               </div>
